<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/ax_three"
    tools:context=".fragments.SettingsFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ax_main">

        <TextView
            android:id="@+id/abv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/about_us"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/abv"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:text="@string/about_txt"
            android:textColor="@color/white"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt3"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/version_1_2_3"
            android:textColor="@color/ax_three"
            android:textSize="20sp"
            android:typeface="sans" />

        <LinearLayout
            android:id="@+id/recs"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/textView5"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/audio"
                android:backgroundTint="@color/ax_three" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/your_music_recordings"
                android:textColor="@color/au_back_all"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>

        <TextView
            android:id="@+id/timer_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recs"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/timer_head"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:typeface="serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/timer_txt"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="00 00 00"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans" />

            <Button
                android:id="@+id/button_timer"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="16dp"
                android:background="@drawable/selector_button_green"
                android:text="@string/set_timer_a"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/button_mail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/selector_button_green"
            android:text="@string/mail_to_developer"
            android:textColor="@color/white" />
    </RelativeLayout>
</FrameLayout>