<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/back_main_cell"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/errorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/you_new_nickname"
                android:textAlignment="center"
                android:textColor="@color/textMenu"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_n"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/you_new_name"
                android:inputType="textPersonName"
                android:textColor="@color/textMenu"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/accentTowColor" />

            <Button
                android:id="@+id/btn_ook"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/ax_three"
                android:text="@string/save"
                android:textColor="@color/textMenu"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>