<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/back_main_cell"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deleteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/complain_to_the_radio_station"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="sans" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_stream_not_work"
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/selector_button_green"
                android:backgroundTint="@color/ax_three"
                android:text="@string/this_stream_does_not_work"
                android:textColor="@color/back_app_main_color"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_mystation"
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/selector_button_green"
                android:backgroundTint="@color/ax_txt_two"
                android:text="@string/my_station"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>